# autotools-learn

./: .gitignore  Makefile.am  README  configure.ac  groups  project.config
inc/: hello.h
src/: Makefile.am  hello.c  hwa  main.c
